--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -166,7 +166,7 @@ body {
   font-weight: 600;
   line-height: 1.1;
   /* margin-left: 80px; */
-  text-shadow: 1px 1px #4e652e;
+  text-shadow: 2px 2px #4e652e;
 }
 
 .MuiTypography-body1 {
@@ -174,6 +174,18 @@ body {
   width: 175px;
   font-size: 16pt;
   font-weight: bold;
+}
+
+.MuiTypography-body {
+  color: #646262a7;
+  width: 100%;
+  font-size: 38px;
+  margin-top: 40px;
+  width: 90%;
+  font-weight: 600;
+  line-height: 1.1;
+  /* margin-left: 80px; */
+  text-shadow: 2px 2px #4e652e;
 }
 
 .MuiTypography-alignLeft {
